--- a/BoatRentalSystem.API/appsettings.json
+++ b/BoatRentalSystem.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BoatRentalSystemDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
+
   "AllowedHosts": "*"
 }
