--- a/BoatRentalSystem.Infrastructure/BoatRentalSystem.Infrastructure.csproj
+++ b/BoatRentalSystem.Infrastructure/BoatRentalSystem.Infrastructure.csproj
@@ -7,7 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BoatRentalSystem.Core\BoatRentalSystem.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="ِAdditionRepository.cs" Link="Repositories\ِAdditionRepository.cs" />
   </ItemGroup>
 
 </Project>
