--- a/BoatRentalSystem.API/appsettings.json
+++ b/BoatRentalSystem.API/appsettings.json
@@ -1,14 +1,46 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BoatRentalSystemDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+	"Serilog": {
+		"MinimumLevel": {
+			"Default": "Information"
+		},
+		"WriteTo": [
 
+			{
+				"Name": "Console"
+			},
+			{
+				"Name": "File",
+				"Args": {
+					"path": "logs/textlogs/log.txt",
+					"outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}",
+					"rollingInterval": "Day"
+				}
+			},
+			{
+				"Name": "Seq",
+				"Args": {
+					"serverUrl": "http://localhost:5341"
+				}
+			},
+			{
+				"Name": "File",
+				"Args": {
+					"path": "logs/jsonlogs/log.json",
+					"rollingInterval": "Day",
+					"formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+				}
+			}
+		]
+	},
+	"ConnectionStrings": {
+		"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BoatRentalSystemDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+	},
+	"JWT": {
+		"Key": "0r0STvCrVOciCyo2jdtgWlhkSym+5iuqOUMxvRiTsc4=",
+		"Issuer": "SecureApi",
+		"Audience": "SecureApiUser",
+		"DurationInDays": 30
+	},
 
-  "AllowedHosts": "*"
+	"AllowedHosts": "*"
 }
