--- a/BoatRentalSystem.Application/BoatRentalSystem.Application.csproj
+++ b/BoatRentalSystem.Application/BoatRentalSystem.Application.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="City - Copy\**" />
+    <EmbeddedResource Remove="City - Copy\**" />
+    <None Remove="City - Copy\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="MediatR" Version="12.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
